Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.5.11, 10.5.12, 10.6.4
-
Component/s: Platform Windows, Storage Engine - MyISAM
-
Labels:
-
Environment:Windows 64 Server or WIn10
Description
When setting the key_buffer_size for ISAM tables to a value larger than 4GB mariadb uses only 4GB and crashes if it would actually need more than 4GB.
You can easily check that in Task-Manager (in german it's "Zugesicherte Groesse", not sure whats it on english windows).
Compare with versions before 10.5 where it was working fine (10.4.21 for example).
When you do something that would use more than 4GB (in my case creating index after import for a very large table) it crashes with "mysqld got exception 0xc0000005 ;"
from Error-log:
Server version: 10.5.12-MariaDB-log
key_buffer_size=0
read_buffer_size=131072
max_used_connections=2
max_threads=65537
thread_count=3
It is possible that mysqld could use up to
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 5398 K bytes of memory
Hope that's ok; if not, decrease some variables in the equation.
Interesting is the "key_buffer_size=0". It actually was set to 8GB here. When setting it to 7GB it crashes with "key_buffer_size=3221225472".
It looks like mariadb uses a 32bit variable somewhere. On Linux or on Windows with Versions before 10.5 it's working fine.
I tried 10.6.4 and it has the same bug. Earlier versions (i tried 10.4.21, 10.3.31, 10.2.40) were working fine.
Please fix.
Attachments
Issue Links
- is caused by
-
MDEV-18851 modernise Linux Large Page support (multiplesizes)
-
- Closed
-
- relates to
-
MDEV-9256 aria_chk does not repair tables
-
- Closed
-